--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "c:\\java-libs\\jdbc-connectors\\mysql-connector-j-8.3.0.jar"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
